--- a/portofolio-app/app/globals.css
+++ b/portofolio-app/app/globals.css
@@ -65,3 +65,63 @@ html {
   scroll-behavior: smooth;
 }
 
+@keyframes spin-reverse {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+
+@keyframes float {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+}
+
+@keyframes spin-slow {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes zoom {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+}
+
+.zoom-anim {
+  animation: zoom 6s ease-in-out infinite;
+}
+
+
+.float-anim {
+  animation: float 4s ease-in-out infinite;
+}
+
+.spin-anim {
+  animation: spin-slow 20s linear infinite;
+}
+
+.prose ol {
+  list-style-type: decimal;
+  padding-left: 1.25rem;
+}
+.prose ul {
+  list-style-type: disc;
+  padding-left: 1.25rem;
+}
+
+
